Fixed some issues found by findbugs-tests.
Signed-off-by: Deniz Bahadir <dbahadir@benocs.com>